@@ -1,3 +1,8 @@
+2015-04-07 Riccardo Mottola <rm@gnu.org>
+
+	* Modules/Editors/ProjectCenter/PCEditorView.m
+	Use constants and not strings as keys.
+
 2015-03-22 Riccardo Mottola <rm@gnu.org>
 
 	* Modules/Preferences/EditorFSC/PCEditorFSCPrefs.m
